--- a/examples/RecvLightSensor_OOP/index.html
+++ b/examples/RecvLightSensor_OOP/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 
   </head>
   <body>
-    <!-- micro:bit webusb library -->
+    <script src="bulb.js"></script>
     <script src="ubitwebusb.js"></script>
     
     <script src="sketch.js"></script>
-  
-
-</body></html>
+  </body>
+</html>
