--- a/examples/SendRGB/index.html
+++ b/examples/SendRGB/index.html
@@ -3,7 +3,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     
-    <script src="ubitwebusb.js"></script>
+    <script src="../../ubitwebusb.js"></script>
     <meta charset="utf-8">
 
   </head>
